@@ -10,6 +10,7 @@
 * Fixed #3516: Trigger invalid-form event even when remote validation is involved
 * Added invalidHandler option as a shortcut to bind("invalid-form", function() {})
 * Fixed Safari issue for loading indicator in ajaxSubmit-integration-demo (append to body first, then hide)
+* Added test for creditcard validation and improved default message
 
 1.4
 ---
